--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ sudo: false
 language: ruby
 cache: bundler
 rvm:
-  - 2.4.1
-before_install: gem install bundler -v 2.0.1
+  - 2.3.1
+  - 2.4
+  - 2.5
+  - 2.6
+before_install: gem install bundler --no-document -v 2.0.1
