feat(rubocop): upddate to TargetRubyVersion: '2.5'
* update required ruby version '>= 2.5.1'
* fix cops

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,15 @@
 inherit_from: .rubocop_todo.yml
 
+AllCops:
+  TargetRubyVersion: '2.5'
+  NewCops: enable
+
+Layout/LineLength:
+  Max: 100
+  Exclude:
+    - "*.gemspec"
+    - "**/*_spec.rb"
+
 Metrics/ModuleLength:
   Exclude:
     - "**/*_spec.rb"
