--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Ruby
+name: RSpec
 
 on:
   push:
@@ -14,7 +14,11 @@ jobs:
     strategy:
       matrix:
         ruby:
-          - '3.0.2'
+          - '2.7'
+          - '3.0'
+          - '3.1'
+          - '3.2'
+          - '3.3'
 
     steps:
     - uses: actions/checkout@v3
